# Recursive-Deep-Research

./: .env.example  .gitignore  Makefile  README.md  Recursive_Deep_Research_Colab.ipynb  Recursive_Deep_Research_Colab_V2.ipynb  pyproject.toml  requirements.txt
configs/: default.yaml
data/: golden_set.json
logs/: agent_results.csv  baseline_results.csv
scripts/: evaluate.py  inference.py  train.py
src/: __init__.py  config_parser.py  dataset.py  model.py  schemas.py  trainer.py  utils.py
